objects/SkillTemplate__mdt/SkillTemplate__mdt.object-meta.xml
<CustomObject>
    <label>SkillTemplate</label>
    <pluralLabel>SkillTemplates</pluralLabel>
</CustomObject>