objects/SkillTemplate__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Combat</fullName>
                <default>true</default>
                <label>Combat</label>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Magical</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Ettiquette</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>