objects/SkillTemplate__mdt/fields/Concentrations__c.field-meta.xml
<CustomField>
    <fullName>Concentrations__c</fullName>
    <label>Concentrations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>