objects/SkillTemplate__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>