objects/SkillTemplate__mdt/fields/Requires_Name__c.field-meta.xml
<CustomField>
    <fullName>Requires_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Name</label>
    <type>Checkbox</type>
</CustomField>